--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "network_analysis"]
 	path = network_analysis
 	url = git@github.com:yohm/network_analysis.git
+[submodule "infomap"]
+	path = infomap
+	url = https://github.com/mapequation/infomap.git
