--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ set(SOURCE_FILES
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 add_executable(homophily_wsn.out main.cpp ${SOURCE_FILES})
 
+add_executable(homophily_wsn_different_q.out main_different_q.cpp ${SOURCE_FILES})
+
 set(SOURCE_FILES2
         spreading/NetSpreading.cpp
         spreading/NetSpreading.hpp
